--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
 //                   $(this).remove();
 //                });
 
-                //Ajaxを使えばページ内でサーバー通信をすることができる
-                //jQueryでやるには
+                //Ajax
+                //Asynchronous JavaScript + XML
+                // 非同期: 処理が終わる前に次の処理に移る
 
                 //サーバー側の情報を読み込む
                 //.load();
@@ -207,16 +208,36 @@
                 //非同期: 処理が終わる前に次の処理に移る
                 //loadという命令が非同期なので、more.htmlに書かれているmessageの
                 //cssは色が変わらない
-                $('button').click(function() {
+               // $('button').click(function() {
                     //処理が終わった後に実行するコールバック関数を使う
                     //非同期なので、この処理がおわった後にこれを実行する
                     //という手順をとりたい場合はコールバック関数を使う
-                    $('#result').load('more.html', function() {
+                   // $('#result').load('more.html', function() {
                         //読み込む前に実行されてしまう
-                        $('#message').css('color', 'red');
-                    });
+                   //     $('#message').css('color', 'red');
+                   // });
 
-                })
+                //})
+
+                //Ajax
+                //Asynchronous JavaScript + XML
+                // 非同期: 処理が終わる前に次の処理に移る
+                //$.getを使ってみよう(フォームと同じ)
+                // $.post データの更新をしたい場合
+                // $.get データの取得をしたい場合
+
+                $('#greet').click(function() {
+                    //gree.phpファイルに$_GET['name']で獲得でｋるように
+                    //パラメーターを渡している
+                    //PHP側の読み込む処理が終わったら、json形式でデータが
+                    //渡され、data.message、data.lengthの中身のデータが表示される
+                    $.get('greet.php', {
+                        name: $('#name').val()
+                        //サーバーとの通信の完了時に実行される
+                    }, function(data) {
+                        $('#result').text(data.message + '(' + data.length + ')');
+                    });
+                });
 
 
             });
@@ -225,6 +246,11 @@
 <body>
     <p>jQueryの練習</p>
 
+    <p>
+        <input type="text" name="name" id="name">
+        <input type="button" id="greet" value="Greet!">
+    </p>
+
     <button>Add Button</button>
 
     <button>もっと読む</button>
@@ -232,7 +258,7 @@
 
     <p><a href="http://google.com" data-sitename="google">Google</a></p>
 
-    <input type="text" id="name">
+    <!--<input type="text" id="name">--?
     <select id="members", name="members">
         <option>nozawa</option>
         <option>fukuchi</option>
